sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:13: error: not found: value v
  v=getValeur(n)
  ^AlgInsertionSort:14: error: not found: value v
	while(plusPetitQue(v,getValeur(i-1))){
                           ^